--- a/style.css
+++ b/style.css
@@ -7,17 +7,123 @@
 }
 body {
   width: 100%;
-  height: 100vh;
+  height: 600vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-flow: column;
   background-image: linear-gradient(180deg, #f8a4d8, #6c63ff);
+  position: relative;
 }
-/* background-color: rgb(168, 157, 6); */
-
+header {
+  width: 100%;
+  height: 10%;
+  background-color: rgba(255, 255, 255, 0.3);
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+header .logo img h2 {
+  width: 100px;
+  height: 50px;
+}
+nav {
+  width: 70%;
+  /* background-color: rgb(168, 157, 6); */
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 40%;
+}
+nav li {
+  list-style: none;
+  background-color: rgba(255, 255, 255,0.2);
+  width: 90px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  color: #fff;
+}
+nav li:hover {
+  background-color: rgba(108, 99, 255,0.4);
+  transition: 0.5s 0.5s ease;
+}
+h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:  rgba(255, 255, 255,0.1);
+  width: 40%;
+  height: 5%;
+  border-radius: 20px;
+}
+aside {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.top-center {
+  width: 80%;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.left1, .left2, .right2, .right1 {
+  width: 20%;
+  height: 300px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  background-image: url(./art.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding-top: 30px;
+  color: #fff;
+}
+.image {
+  width: 100%;
+  height: 400px;
+  background-image: url(./planet-space-art.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.center-center {
+  width: 100%;
+  height: 150px;
+  background-color: rgba(110, 106, 148, 0.24);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.center-center button{
+  width: 8%;
+  height: 20%;
+  border-radius: 10px;
+}
+main {
+  width: 98%;
+  height: 20%;
+  background-color: rgba(255, 255, 255, 0.129);
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  padding-left: 1%;
+}
 form {
-  background-image: url(./WhatsApp\ Image\ 2023-02-04\ at\ 23.04.56.jpg);
+  background-image: url(./planet2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 350px;
@@ -74,12 +180,15 @@ a p:hover {
   transition: 0.5s 0.5s ease;
   color: #fff;
 }
-input {
+.signin {
+  display: flex;
+  align-self: center;
+  border-radius: 50px;
   width: 100px;
   height: 40px;
   background-color: rgba(255, 255, 255,0.5);
 }
-input:hover {
+.signin:hover {
   background-color: rgba(108, 99, 255,0.2);
   transition: 0.5s 0.5s ease;
   color: #fff;
@@ -89,8 +198,82 @@ p {
   align-self: center;
   height: 30px;
 }
-.signin {
+section {
+  width: 100%;
+  height: 500px;
   display: flex;
-  align-self: center;
-  border-radius: 50px;
+  align-items: center;
+  justify-content: space-around;
+}
+.left {
+  /* visibility: hidden; */
+  display: flex;
+  flex-flow: column;
+  width: 30%;
+  height: 80%;
+  background-color: red;
+}
+.menu {
+  visibility: hidden;
+  width: 20%;
+  height: 80%;
+  background-color: red;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.menu h4 {
+  justify-content: center;
+  color: #fff;
+}
+.menu ul {
+  flex-flow: column;
+  width: 30%;
+  height: 60%;
+}
+.right {
+  display: flex;
+  flex-flow: column;
+  align-items: self-start;
+  justify-content: space-evenly;
+  width: 40%;
+  height: 80%;
+}
+.right, h4 span {
+  color: #fff;
+}
+.right span {
+  color: #f8a4d8;
+}
+.right .name, .email, #message {
+  width: 80%;
+  border-radius: 10px;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.right .name, .email {
+  height: 10%;
+}
+.right #message {
+  height: 40%;
+}
+#message {
+  padding: 12px 20px;
+  font-size: 16px;
+  resize: none;
+}
+.right .sub {
+  border-radius: 10px;
+  width: 15%;
+  height: 10%;
+}
+.right .sub:hover {
+  background-color: rgba(108, 99, 255,0.2);
+  transition: 0.5s 0.5s ease;
+  color: #fff;
+}
+footer {
+  position: absolute;
+  bottom: 10px;
 }
